--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,21 @@
     <link rel="stylesheet" href="output.css" />
     <title>Voodo Test</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="bg-sand font-main font-bold text-xl">
+    <header
+      class="flex justify-between border-b border-1 py-12 max-w-screen-2xl mx-auto"
+    >
+      <img src="logo.svg" alt="logo" />
+      <div class="block">
+        <img
+          class="inline-block"
+          src="../src/imgs/shopping-cart.svg"
+          alt="shopping cart"
+        />
+        <button class="bg-black text-white px-3 py-1 rounded ml-12">
+          Sign-up
+        </button>
+      </div>
+    </header>
   </body>
 </html>
