pagination without styles for active button

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
     <div class="bg-black border-b border-1"></div>
 
     <!-- main -->
-    <main class="max-w-screen-xl mx-auto pt-24">
+    <main class="max-w-screen-xl mx-auto py-12">
       <!-- beta-info -->
-      <div class="bg-black flex justify-between items-center p-6 w-full">
+      <div class="bg-black flex justify-between items-center my-12 p-6 w-full">
         <div class="flex items-center">
           <div class="flex items-center">
             <svg
@@ -82,9 +82,15 @@
         </svg>
       </div>
 
+      <!-- pagination -->
+      <div class="flex justify-center" id="pagination"></div>
+
       <!-- products -->
+      <div class="grid grid-cols-4" id="card-container"></div>
+
+      <div id="card-container"></div>
     </main>
   </body>
 
-  <script src="../src/api/products.js"></script>
+  <script type="module" src="../src/js/utils/updatePage.js"></script>
 </html>
