--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
     <div class="bg-black border-b border-1"></div>
 
     <!-- main -->
-    <main class="max-w-screen-xl mx-auto py-12">
+    <main class="max-w-screen-xl mx-auto py-24">
       <!-- beta-info -->
-      <div class="bg-black flex justify-between items-center my-12 p-6 w-full">
+      <div class="bg-black flex justify-between items-center mb-12 p-6 w-full">
         <div class="flex items-center">
           <div class="flex items-center">
             <svg
@@ -82,11 +82,11 @@
         </svg>
       </div>
 
+      <!-- products -->
+      <div class="grid grid-cols-4 mb-16" id="card-container"></div>
+
       <!-- pagination -->
       <div class="flex justify-center" id="pagination"></div>
-
-      <!-- products -->
-      <div class="grid grid-cols-4" id="card-container"></div>
 
       <div id="card-container"></div>
     </main>
