--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
     <!-- main -->
     <main class="max-w-screen-xl mx-auto py-24">
       <!-- beta-info -->
-      <div class="bg-black flex justify-between items-center mb-12 p-6 w-full">
+      <div
+        class="bg-black flex justify-between items-center mb-12 p-6 w-full font-space-grotesk"
+      >
         <div class="flex items-center">
           <div class="flex items-center">
             <svg
@@ -83,12 +85,13 @@
       </div>
 
       <!-- products -->
-      <div class="grid grid-cols-4 mb-16" id="card-container"></div>
+      <div
+        class="grid grid-cols-4 gap-x-6 gap-y-12 mb-16 font-space-grotesk text-sm"
+        id="card-container"
+      ></div>
 
       <!-- pagination -->
       <div class="flex justify-center" id="pagination"></div>
-
-      <div id="card-container"></div>
     </main>
   </body>
 
