--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         Test
       </a>
       <div class="block">
-        <a href="#shopping-cart">
+        <button class="toggle-cart" id="shopping-cart">
           <img
             class="inline-block"
             src="../src/imgs/shopping-cart.svg"
@@ -35,6 +35,27 @@
         </button>
       </div>
     </header>
+
+    <!-- cart drawer -->
+    <div class="bg-dark p-11 w-[445px] h-full text-sand fixed top-0 z-50 transition-all duration-300" style="right: -445px;" id="cart-drawer">
+      <div class="cart-items">
+        <div class="flex justify-between items-center mb-6">
+          <h2 class="text-2xl font-bold text-sand">Shopping Cart</h2>
+          <button class="toggle-cart">
+            <svg
+              class="stroke-sand w-6 h-6"
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>            
+          </button>
+        </div>
+        <div class="bg-sand border-b border-1"></div>
+      </div>
+    
+      <div class="cart-total">
+        <!-- sum -->
+      </div>
+    </div>
 
     <!-- divider -->
     <div class="bg-black border-b border-1"></div>
@@ -111,4 +132,5 @@
 
   <script type="module" src="../src/js/utils/updatePage.js"></script>
   <script type="module" src="../src/js/utils/toggleHiddenInfo.js"></script>
+  <script type="module" src="../src/js/utils/toggleCartDrawer.js"></script>
 </html>
