--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,19 @@
     <div class="bg-dark p-11 w-[445px] h-full text-sand fixed top-0 z-50 transition-all duration-300" style="right: -445px;" id="cart-drawer">
       <div class="cart-items">
         <div class="flex justify-between items-center mb-6">
-          <h2 class="text-2xl font-bold text-sand">Shopping Cart</h2>
+          <h2 class="text-2xl font-bold text-sand">
+            Shopping Cart
+          </h2>
           <button class="toggle-cart">
             <svg
               class="stroke-sand w-6 h-6"
-              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>            
           </button>
