add addToCart logic

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,11 @@
         </div>
         <div class="bg-sand border-b border-1"></div>
       </div>
-    
-      <div class="cart-total">
-        <!-- sum -->
+      <div id="cart-products"></div>
+
+      <!-- sum -->
+      <div class="cart-total" id="cart-total">
+       
       </div>
     </div>
 
@@ -138,7 +140,9 @@
     </main>
   </body>
 
-  <script type="module" src="../src/js/utils/updatePage.js"></script>
+  <script type="module" src="../src/js/utils/showCartProducts.js"></script>
+  <script type="module" src="../src/js/utils/cart.js"></script>
+  <script type="module" src="../src/js/utils/pagination.js"></script>
   <script type="module" src="../src/js/utils/toggleHiddenInfo.js"></script>
   <script type="module" src="../src/js/utils/toggleCartDrawer.js"></script>
 </html>
