cart quntity zero items delete item logic

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             </svg>            
           </button>
         </div>
-        <div class="bg-sand border-b border-1"></div>
+        <div class="bg-sand border-b border-1 mb-14"></div>
       </div>
       <div id="cart-products"></div>
 
