cart total sum logic

--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,7 @@
         <div class="bg-sand border-b border-1 mb-14"></div>
       </div>
       <div id="cart-products"></div>
-
-      <!-- sum -->
-      <div class="cart-total" id="cart-total">
-       
-      </div>
+      <div id="cart-total"></div>
     </div>
 
     <!-- divider -->
