--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,13 @@
         <div class="bg-sand border-b border-1 mb-14"></div>
       </div>
       <div id="cart-products"></div>
-      <div id="cart-total"></div>
+      <div class="bg-sand border-b border-1 mb-9"></div>
+
+      <!-- cart total -->
+      <div class="flex justify-between font-bold">
+        <div class="uppercase">Total</div>
+        <div id="cart-total">$0.00</div>
+      </div>
     </div>
 
     <!-- divider -->
