--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   </head>
   <body class="bg-sand">
     <!-- header -->
-    <header class="flex justify-between py-12 mx-6 2xl:px-0 2xl:max-w-screen-xl 2xl:mx-auto">
+    <header class="flex justify-between py-6 md:py-12 mx-6 2xl:px-0 2xl:max-w-screen-xl 2xl:mx-auto">
       <a
         class="flex static 2xl:relative top-0 -left-14"
         href="./index.html"
       >
-        <img src="../src/imgs/header-logo.svg" alt="logo">
+        <img class="h-14 w-32 md:h-auto md:w-auto" src="../src/imgs/header-logo.svg" alt="logo">
       </a>
-      <div class="block">
+      <div class="flex items-center md:block">
         <button class="toggle-cart" id="shopping-cart">
           <img
             class="inline-block"
@@ -24,7 +24,7 @@
           />
         </a>
         <button
-          class="bg-black text-white px-3 py-1 rounded ml-12 font-space-grotesk font-bold text-xl hover:bg-gray-light transition-all duration-300"
+          class="bg-black text-white px-3 py-1 rounded ml-4 md:ml-12 font-space-grotesk font-bold text-sm md:text-xl hover:bg-gray-light transition-all duration-300"
         >
           <a href="#sign-up">
             Sign-up
@@ -75,7 +75,7 @@
     <div class="bg-black border-b border-1"></div>
 
     <!-- main -->
-    <main class="mx-6 2xl:px-0 2xl:max-w-screen-xl 2xl:mx-auto py-24">
+    <main class="mx-6 2xl:px-0 2xl:max-w-screen-xl 2xl:mx-auto pt-6 pb-12 xl:py-24">
       <!-- beta-info -->
       <div
         class="bg-black flex justify-between items-center mb-12 p-6 w-full rounded font-space-grotesk relative"
