responsive products grid

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
 
       <!-- products -->
       <div
-        class="grid grid-cols-4 gap-x-6 gap-y-12 mb-16 font-space-grotesk text-sm"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-x-6 gap-y-12 mb-16 font-space-grotesk text-sm"
         id="card-container"
       ></div>
 
