--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         class="flex static 2xl:relative top-0 -left-14"
         href="./index.html"
       >
-        <img class="h-14 w-32 md:h-auto md:w-auto" src="../src/imgs/header-logo.svg" alt="logo">
+        <img class="h-14 w-32 md:h-auto md:w-auto" src="imgs/header-logo.svg" alt="logo">
       </a>
       <div class="flex items-center md:block">
         <button class="toggle-cart" id="shopping-cart">
           <img
             class="inline-block"
-            src="../src/imgs/shopping-cart.svg"
+            src="imgs/shopping-cart.svg"
             alt="shopping cart"
           />
         </a>
@@ -155,7 +155,7 @@
         lg:justify-center
       "
       href="./index.html">
-        <img class="w-20 h-20" src="../src/imgs/logo.svg" alt="logo">
+        <img class="w-20 h-20" src="imgs/logo.svg" alt="logo">
       </a>
       <ul class="footer-list">
         <li><a class="footer-link" href="#faq">FAQ</a></li>
@@ -177,9 +177,9 @@
     </footer>
   </body>
 
-  <script type="module" src="../src/js/utils/showCartProducts.js"></script>
-  <script type="module" src="../src/js/utils/cart.js"></script>
-  <script type="module" src="../src/js/utils/pagination.js"></script>
-  <script type="module" src="../src/js/utils/toggleHiddenInfo.js"></script>
-  <script type="module" src="../src/js/utils/toggleCartDrawer.js"></script>
+  <script type="module" src="docs/js/utils/showCartProducts.js"></script>
+  <script type="module" src="docs/js/utils/cart.js"></script>
+  <script type="module" src="docs/js/utils/pagination.js"></script>
+  <script type="module" src="docs/js/utils/toggleHiddenInfo.js"></script>
+  <script type="module" src="docs/js/utils/toggleCartDrawer.js"></script>
 </html>
