deploy file structure fix

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     </footer>
   </body>
 
-  <script type="module" src="docs/js/utils/showCartProducts.js"></script>
-  <script type="module" src="docs/js/utils/cart.js"></script>
-  <script type="module" src="docs/js/utils/pagination.js"></script>
-  <script type="module" src="docs/js/utils/toggleHiddenInfo.js"></script>
-  <script type="module" src="docs/js/utils/toggleCartDrawer.js"></script>
+  <script type="module" src="js/utils/showCartProducts.js"></script>
+  <script type="module" src="js/utils/cart.js"></script>
+  <script type="module" src="js/utils/pagination.js"></script>
+  <script type="module" src="js/utils/toggleHiddenInfo.js"></script>
+  <script type="module" src="js/utils/toggleCartDrawer.js"></script>
 </html>
